FIX: Button z-index

--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -48,7 +48,7 @@ $btn-variant-hover: (
     position: absolute;
     top: 0;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
     width: 27px;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -72,7 +72,7 @@ $btn-variant-hover: (
     left: 27px;
     right: 27px;
     height: 100%;
-    z-index: 2;
+    z-index: 0;
     background-size: 100% 100%;
     background-repeat: repeat-x;
     background-color: transparent;
@@ -88,7 +88,7 @@ $btn-variant-hover: (
     width: 100%;
     padding: 17px 0px;
     position: relative;
-    z-index: 2;
+    z-index: 0;
     display: flex;
     align-items: center;
     justify-content: center;
